# volimg

./: CMakeLists.txt  README.md  image.c
include/: img2d.h  img_vol.h  operations.h
src/: img_vol.cc  operations.cc
tests/: CMakeLists.txt  img_vol_test.cc
